# sdkms-client-rust

./: Cargo.toml  README.md  ci.sh
examples/: approval_request.rs  async_client.rs  crud.rs  encrypt_decrypt.rs  get_user.rs  invoke_plugin.rs  plugin_approval_request.rs  session.rs  sign_verify.rs
src/: api_model.rs
src/api_model/: app.rs  approval_request.rs  crypto.rs  error.rs  fido.rs  generated.rs  key_mgmt.rs  log.rs  mod.rs  plugin.rs  session.rs
src/client/: common.rs  impl_async.rs  impl_blocking.rs  mod.rs
tests/: common.rs  test.rs
tests/async_interface/: mod.rs
tests/blocking_interface/: mod.rs
