[package]
name = "sdkms"
version = "0.5.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
API bindings for Fortanix DSM (a.k.a. Fortanix SDKMS)
"""
readme = "README.md"
repository = "https://github.com/fortanix/sdkms-client-rust"
documentation = "https://docs.rs/sdkms"
homepage = "https://fortanix.com/products/sdkms/"
categories = ["api-bindings"]
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["simple-hyper-client/native-tls", "tokio-native-tls"]
async = []

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bitflags = "1.0"
chrono = "0.4"
headers = "0.3.7"
hashbrown = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-hyper-client = "0.1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio-native-tls = { version = "0.3", optional = true }
url = "1.7"
uuid = { version = "1.0", features = ["serde", "v4"] }
strum = { version = "0.21", features = ["derive"] }
openapiv3 = { version = "1.0.1" }
thiserror = "1.0"
rustc-serialize = "0.3.19"
itertools = "0.10.0"

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
tokio = {version = "1.18.2", features=["full"] }
once_cell = "1.12"

[[example]]
name = "async_client"
required-features = ["async"]
